--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -18,11 +18,16 @@ kotlin {
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1"
     implementation "com.google.dagger:dagger:2.55"
+
+    testImplementation("junit:junit:4.13.2")
+    testImplementation('org.mockito:mockito-core:5.15.2')
+    testImplementation('org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.1')
+    testImplementation 'app.cash.turbine:turbine:1.2.0'
 }
