--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-navigation-compose:1.2.0"
 
     // ViewModel
     def lifecycle_version = '2.8.7'
